5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1593_820.log
== TEST (2019-03-25 16:34:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:40:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
qtd50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(int(notas_R50))
NameError: name 'notas_R50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:40:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor= int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
qtd50=valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(int(notas_R50))
NameError: name 'notas_R50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:02:58) 
-- CODE:
valor= int(input("Qual o valor do saque? "))
qtd50=valor // 50
resto_R50 = valor % 50
notas_R10 = resto_R50 // 10
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
notas_R50=qtd50
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 17:03:07) 
-- CODE:
valor= int(input("Qual o valor do saque? "))
qtd50=valor // 50
resto_R50 = valor % 50
notas_R10 = resto_R50 // 10
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
notas_R50=qtd50
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.220329
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:30:08) 
-- CODE:
valor= int(input("Qual o valor do saque? "))
qtd50=valor // 50
resto_R50 = valor % 50
notas_R10 = resto_R50 // 10
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
notas_R50=qtd50
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.142543
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
